--- a/css/galeria/index.html
+++ b/css/galeria/index.html
@@ -4,13 +4,13 @@
     <meta charset='utf-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <style type="text/css">
-        .galeria {
+        .gallery {
             display: flex;
             flex-wrap: wrap;
             justify-content: space-evenly;
         }
 
-        .fotka {
+        .photo {
             position: relative;
             width: calc(100%/3 - 5px);
             padding-top: calc(75%/3 - 5px);
@@ -22,14 +22,14 @@
         }
 
         @media (max-width: 1000px) {
-            .fotka {
+            .photo {
                 width: calc(100%/2 - 5px);
                 padding-top: calc(75%/2 - 5px);
             }
         }
 
         @media (max-width: 600px) {
-            .fotka {
+            .photo {
                 width: calc(100% - 5px);
                 padding-top: calc(75% - 5px);
             }
@@ -37,7 +37,7 @@
 
         /* Ukážka naštýlovania pomocou konštantnej výšky a flexboxu*/
         /*
-        .fotka {
+        .photo {
             position: relative;
             min-width: 400px;
             height: 300px;
@@ -46,54 +46,54 @@
         }
         */
 
-        .fotka > * {
+        .photo > * {
             position: absolute;
             top: 0;
             left: 0;
         }
 
-        .fotka img {
+        .photo img {
             width: 100%;
             height: 100%;
             object-fit: cover;
             transition: opacity 0.5s;
         }
 
-        .fotka h3 {
+        .photo h3 {
             top: 0;
             left: 15px;
         }
 
-        .fotka p {
+        .photo p {
             top: auto;
             bottom: 30px;
             width: 100%;
             text-align: center;
         }
 
-        .fotka h3 {
+        .photo h3 {
             top: 0;
             left: 15px;
         }
 
-        .fotka p, .fotka h3 {
+        .photo p, .photo h3 {
             display: none;
         }
 
-        .fotka:hover p, .fotka:hover h3 {
+        .photo:hover p, .photo:hover h3 {
             display: block;
         }
 
-        .fotka:hover img {
+        .photo:hover img {
             opacity: 0.4;
         }
 
-        .fotka:hover p {
+        .photo:hover p {
             animation-delay: 0.5s;
-            animation: popis-in 1s;
+            animation: description-in 1s;
         }
 
-        @keyframes popis-in {
+        @keyframes description-in {
             from {
                 transform: translateY(1000%);
             }
@@ -105,39 +105,39 @@
     </style>
 </head>
 <body>
-    <div class="galeria">
-        <div class="fotka">
+    <div class="gallery">
+        <div class="photo">
             <img src="images_galeria/fotka.jpg" />
             <h3>Včelín</h3>
             <p>Popisok fotky na ktorej je včelín.</p>
         </div>
 
-        <div class="fotka">
+        <div class="photo">
             <img src="images_galeria/fotka2.jpg" />
             <h3>Včela</h3>
             <p>Popisok fotky na ktorej je včela.</p>
         </div>
 
-        <div class="fotka">
+        <div class="photo">
             <img src="images_galeria/fotka3.jpg" />
             <h3>Včelín</h3>
             <p>Popisok fotky na ktorej je včelín.</p>
         </div>
 
-        <div class="fotka">
+        <div class="photo">
             <img src="images_galeria/fotka4.jpg" />
             <h3>Altánok</h3>
             <p>Altánok za budovou FRI.</p>
         </div>
 
-        <div class="fotka">
+        <div class="photo">
             <img src="images_galeria/fotka5.jpg" />
             <h3>Faukulta riadenia a informatiky</h3>
             <p>Budova FRI zo zadnej strany.</p>
         </div>
 
         <!--
-        <div class="fotka">
+        <div class="photo">
             <img src="images_galeria/fotka6.jpg" />
             <h3>Včela</h3>
             <p>Ďalšia fotka včely</p>
