--- a/js-a-css/analog-clock/index.html
+++ b/js-a-css/analog-clock/index.html
@@ -5,14 +5,14 @@
     <title>Title</title>
     <script>
 
-        function DegToRad(d)
+        function degToRad(d)
         {
             return d * 0.01745;
         }
 
-        function DrawLineMarker(ctx, uhol, markerLength){
+        function drawLineMarker(ctx, uhol, markerLength){
 
-            let angl = DegToRad(uhol);
+            let angl = degToRad(uhol);
             let r = 250 - markerLength;
 
             let sx = 250  + r * Math.cos(angl);
@@ -25,10 +25,10 @@
             ctx.stroke();
         }
 
-        function DrawWatchHand(ctx, uhol, length, width){
+        function drawWatchHand(ctx, uhol, length, width){
             let x = 250;
             let y = 250;
-            let angl = DegToRad(uhol + 270);
+            let angl = degToRad(uhol + 270);
 
             ctx.beginPath();
             ctx.lineWidth = width;
@@ -37,29 +37,29 @@
             ctx.stroke();
         }
 
-        function DrawCircle(ctx){
+        function drawCircle(ctx){
             ctx.lineWidth = 2;
             ctx.beginPath();
-            ctx.arc(250, 250, 250, 0, DegToRad(360));
+            ctx.arc(250, 250, 250, 0, degToRad(360));
             ctx.stroke();
         }
-        function MakeTick(ctx){
+        function makeTick(ctx){
             ctx.clearRect(0, 0, 500, 500);
 
-            DrawCircle(ctx);
+            drawCircle(ctx);
             // cifernik
             for(let i = 0 ; i < (360/6) ; i++) {
                 if (i*6 % 30 == 0) {
-                    DrawLineMarker(ctx, i*6, 30)
+                    drawLineMarker(ctx, i*6, 30)
                 } else {
-                    DrawLineMarker(ctx, i*6, 10)
+                    drawLineMarker(ctx, i*6, 10)
                 }
             }
             let time = new Date();
 
-            DrawWatchHand(ctx, time.getSeconds()*6, 210,1);
-            DrawWatchHand(ctx, time.getMinutes()*6 + time.getSeconds()*0.1, 180,3);
-            DrawWatchHand(ctx, time.getHours()*30 + time.getMinutes()*0.5, 150,5);
+            drawWatchHand(ctx, time.getSeconds()*6, 210,1);
+            drawWatchHand(ctx, time.getMinutes()*6 + time.getSeconds()*0.1, 180,3);
+            drawWatchHand(ctx, time.getHours()*30 + time.getMinutes()*0.5, 150,5);
         }
 
         window.onload = function(){
@@ -67,9 +67,9 @@
             let ctx = canvas.getContext("2d");
 
             setInterval( function() {
-                MakeTick(ctx);
+                makeTick(ctx);
             }, 1000);
-            MakeTick(ctx);
+            makeTick(ctx);
         }
 
 
